# surfwa

./: .gitignore  README.md  nixpacks.toml  pyproject.toml
.github/workflows/: pages.yml
deploy/: start.sh
docs/superpowers/specs/: 2026-07-06-surfwa-surf-update-generator-design.md  2026-07-07-daily-web-page-design.md
knowledge/: spots.yaml
src/surfwa/: backtest.py  cli.py  nowcast.py  pipeline.py  score.py  spots.py
src/surfwa/fetch/: buienradar.py  openmeteo.py  rws.py
src/surfwa/render/: chart.py  prose.py  structured.py  web.py
tests/: test_backtest.py  test_buienradar.py  test_chart.py  test_cli.py  test_nowcast.py  test_openmeteo.py  test_pipeline.py  test_prose.py  test_rws.py  test_score.py  test_spots.py  test_web.py
