[project]
name = "surfwa"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["requests>=2.31", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "responses>=0.25", "matplotlib>=3.8"]
image = ["matplotlib>=3.8"]

[project.scripts]
surfwa = "surfwa.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
